--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,12 @@
 {
-  "name": "wpfactory/wpfactory-key-manager"
+  "name": "wpfactory/wpfactory-key-manager",
+  "autoload": {
+    "classmap": [
+      "includes"
+    ],
+    "files": [
+      "wpfactory-key-manager.php"
+    ]
+  }
+
 }
