--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 idea
 .idea/*
 node_modules/
+/vendor/
 package-lock.json
-# WPF Documentor
-vendor/wpfactory/wpf-settings-exporter
-vendor/wpfactory/wpf-documentor
-wpf-documentor
